themes/clouds/style.css
/*
 * Copyright (c) 2010 Rob Peters
 *
 * Derived from PhpGedView Cloudy theme
 * Original author w.a. bastein http://genealogy.bastein.biz
 * Copyright (C) 2010  PGV Development Team.  All rights reserved.
 *
 * $Id$
*/

.something {
/*empty style to make sure that the BODY style is not ignored */
}

body {
	color: #000066;
	background-color: #c8e7ff;
	background-image: url('images/background.jpg');
	background-attachment: fixed;
	background-position: top left;
	background-repeat: repeat-x;
	font: 11px tahoma, arial, helvetica, sans-serif;
}

#rapcontainer {
margin-top: 10px;
margin-bottom: 10px;
margin-left:10px;
margin-right: 10px;
background-color: #fff;
border: 1px solid #003399;
}

* {
margin:0px;
padding:0px;
}
	background:red;
/*	Color settings for the this theme	*/
/*	Define Header and Light Text Colors	*/

#header {
background:#5d6779;
color: #ffffff;
}
/*	Define Tbl hdrs and Light Text Colors	*/

.descriptionbox,
.descriptionbox a,
.topbottombar,
.topbottombar a,
.list_label, 
.list_label a,
.facts_label,
.facts_label a,
.facts_label .date,
.facts_label03,
.facts_table h2,
.facts_table .ltr .descriptionbox a, 
.blockcontent .facts_label {
	background:#95B8E0;
	color: #003399;
}

/*	Define TopLink Color				*/

#toplinks {
background:#aaccff;
}

/* Correct icon link problem  */
.menuitem_hover a:hover, .menuitem_hover_rtl a:hover{
color: #2A2B2D;
}

/*	Define Base Color					*/

.descriptionbox .submenu a,
.blockcontent, 
.list_value, 
.list_value_wrap, 
.tab_cell_active, 
.news_box, optionbox,
.person0,  .center .person_box,
.submenuitem_hover, 
.submenuitem_hover_rtl {
	background:#fff;
}

.submenuitem_hover, 
.submenuitem_hover_rtl {
	background:#c8e7ff;
}

/*	Define Link Color					*/

a {
	color: #003399;
	text-decoration: none;
	}

a.link:link, a.link:visited, a.link:active, a.link:hover, .menuitem a, 
.nameZoom {
color:#003399;
}

a:hover { 
color: red;
text-decoration: none;
}

/*	Define Alert Color					*/

.error, .warning, .red {
color:#2a2b2d;
}

.facts_labelred, .facts_valuered {
border: solid red 2px;
}

/*	Define lite Text Color 				*/
.descriptionbox {
color: #fff;
}



/*	Define Dark Text Color 				*/

input,button,textarea {
border-color:#fff #000066 #000066 #fff;
}

body,
.subheaders {
	color:#000066;
}

#toplinks {
width:100%;
height:26px;
}

.toplinks_left {
min-width: 200px;
padding-left: 10px;
}

.toplinks_right {
padding-right: 18px;
} 

.icon, .adminicon {
border:none;
padding-top:1px;
padding-left:0px;
padding-right:4pt;
}

/*	Submenu style				*/

.submenu, .submenu_rtl {
visibility: hidden;
position: absolute;
z-index: 100;
font-size: 11px;
background: #fff;
border: solid #999 1px;
}

.submenu_rtl {
text-align: right;
}

/*	Submenuitem style			*/

.submenuitem .icon,
.submenuitem_rtl .icon,
.submenuitem_hover .icon,
.submenuitem_hover_rtl .icon {
width: 22px;
height: 22px;
vertical-align: middle;
padding:0px 5px 0px 3px;
}

.submenuitem, .submenuitem_rtl,
.submenuitem_hover, .submenuitem_hover_rtl {
height: 22px;
padding-right: 5px;
font-size: 11px;
border: 1pt solid white;
white-space: nowrap;
}

.submenuitem a, .submenuitem_rtl a, 
.submenuitem_hover a, .submenuitem_hover_rtl a {
color: #000;
display: inline-block;
vertical-align: middle;
text-decoration:none;
}

.submenuitem_rtl, .submenuitem_hover_rtl {
direction: rtl;
text-align: right;
}

/*	End Toplinks Section				 */

/*   Edit Facts */


td.descriptionbox div a {
color: white;
}

td.descriptionbox .submenu a {
color: #000;
}

td.descriptionbox div div div a {
color: #000;
}

td.descriptionbox div div div a:hover {
color: red;
}

/*   End Edit Facts  */

.facts_label .submenu a {
background: #fff;
color: #000;
}

#researchlog_content a {
color: #fff;
}

tfoot label  {
margin-left:5px;
}

.title .gedcomtitle {
text-decoration:none;
	color: #003399;
}

p.center a {
font-size: 13px;
}

p.center a:hover, 
p.center span.warning, 
td.list_label span.warning {
font-size: 13px;
color:#f50;
}

td .optionbox .help img {
background: inherit;
}

table.header {
width:100%;
padding:0 10px;
margin:0px 0px 0px 0px;
}

div.error {
color:#dd0000;
font-weight:600;
}

p.center .warning, tr td.optionbox span.error, span.error {
color:#f50;
}

/* Override js/jquery-ui.custom.css            */

/* Flyout changes */

.flyout2 {
        margin-left:-40px; /* move popup left */
}
.flyout2 a:hover{ /* color change and force underline */
         color:#2f416f;
         text-decoration:underline !important;
}
#flyout3, #flyout3 a, #phusb, #pwife, #shusb, #swife, #spouse {
    font-size: 11px;
    color: #000;
}

/* Style specific changes                     */
/* Location and behavior of Right Site Tab in/out pin-------*/

/* Navigator and Flyout menu Styles -----------*/

.nav_content #spouse{
color: #003399;
}
.nav_content .facts_label a{
color: #003399;
}

/*	Start Standard Code					*/

.blockcontent {
margin-left:auto;
border:1pt solid #999;
margin-right:5px;
margin-bottom:10px;
font-size: 13px;
overflow:auto;
}

#content {
width:auto;
margin:3px;
padding:10px;
background: #fff;
}


#pid {
color:#333;
background:#FFC;
}

#footer {
clear: both;
width: 99%;
}

#index_main_blocks {
clear:none;

width:66%;
float:left;
}

#index_small_blocks {
clear:none;
width:33%;
float:right;
}

#index_full_blocks {
clear:none;
width:100%;
}

#index_small_blocks .name1 {
color:#333333;
}

#index_small_blocks .blockheader {
width:100%;
caption-side:top;
margin:0;
padding:0;
overflow:hidden;
}

#index_small_blocks .blockh2 {
width:auto;
}

#index_small_blocks .blockhc .help .icon,
#index_small_blocks .blockhc .adminicon,
#index_main_blocks .blockh2 .icon,
#index_main_blocks .blockh2 .adminicon {
position:relative;
text-align:right;
top:3px;
}

#index_small_blocks .blockcontent {
width:auto;
caption-side: right;  
margin-right:2px;
}

#index_main_blocks .blockheader {
caption-side: left;
}

#index_main_blocks .blockh2,
#index_small_blocks .blockhc {
white-space:nowrap;
overflow:hidden;
}
/* ... */

